src/static/style.css
/* ... */
.vjs-setting-menu {
    position: absolute;
    bottom: 110%;
    right: 50%;
    transform: translateX(50%);
    background-color: #333;
    border-radius: 7px;
    color: #eee;
    text-align: center;
    display: none;
    flex-direction: column;
    width: 100px;
    max-height: 50vh;
    overflow: auto;
    transition: all .2s cubic-bezier(0.77, 0, 0.175, 1);
    z-index: 10;
}

.vjs-menu-option-selected {
    background-color: #555 !important;
}

.vjs-button.vjs-active {
    color: var(--vjs-theme-custom--primary) !important;
}

.vjs-setting-menu>button:hover {
    background-color: #666 !important;
}

.vjs-layout-tiny .vjs-picture-in-picture-control
{
    display: none;
}

.vjs-title-bar {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    padding: 15px;
    z-index: 2;
    background: none;
    transition: opacity 0.3s ease-in-out;
    pointer-events: none;
}

.vjs-has-started.vjs-user-inactive.vjs-playing .vjs-title-bar {
    opacity: 0;
}

.vjs-title-bar-text {
    color: white;
    font-size: 1.5em;
    margin: 0;
    padding: 0 2px;
    text-shadow: .02em .02em .1em rgba(0, 0, 0, 0.7), .02em -.02em .1em rgba(0, 0, 0, 0.7),-.02em .02em .1em rgba(0, 0, 0, 0.7), -.02em -.02em .1em rgba(0, 0, 0, 0.7);
    pointer-events: all !important;
    width: fit-content;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
}

.vjs-uploader-text {
    color: white;
    font-size: 1.2em;
    margin-top: 5px;
    padding: 0 2px;
    text-shadow: .02em .02em .1em rgba(0, 0, 0, 0.7), .02em -.02em .1em rgba(0, 0, 0, 0.7),-.02em .02em .1em rgba(0, 0, 0, 0.7), -.02em -.02em .1em rgba(0, 0, 0, 0.7);
    pointer-events: all !important;
    width: fit-content;
}

.vjs-text-track-display > div
{
    display: flex;
    flex-direction: column;
    justify-content: end;
}

.vjs-text-track-cue
{
    position: initial !important;
}

.vjs-text-track-cue > div
{
    background-color: transparent !important;
    text-shadow: 1px 1px .1em rgba(0, 0, 0, 0.9), 1px -1px .1em rgba(0, 0, 0, 0.9),-1px 1px .1em rgba(0, 0, 0, 0.9), -1px -1px .1em rgba(0, 0, 0, 0.9);
}


.vjs-playlist-container
{
    position: relative;
    top: 0;
    left: 0;
    right: 0;
    width: 100%;
    max-width: 100%;
    height: 100%;
    z-index: 5;
    pointer-events: none;
    overflow: hidden;
    transition: opacity 0.3s ease-in-out;
    box-sizing: border-box;
}

.vjs-has-started.vjs-user-inactive.vjs-playing .vjs-playlist-container
{
    opacity: 0;
}

.vjs-playlist-items
{
    position: relative;
    list-style: none;
    padding: 0;
    display: flex;
    overflow-x: auto;
    white-space: nowrap;
    scrollbar-width: none;
    pointer-events: none;
    margin-top: 10px !important;
    top: -100vh;
    transition: top 0.3s cubic-bezier(0.86, 0, 0.07, 1);
}

.vjs-playlist-container.active:not(.vjs-has-started.vjs-user-inactive.vjs-playing) .vjs-playlist-items
{
    top: 0;
    pointer-events: all;
}

.vjs-playlist-items::-webkit-scrollbar
{
    height: 0px;
}

.vjs-playlist-item
{
    display: inline-flex;
    flex-direction: column;
    align-items: center;
    border-radius: 10px;
    background-color: rgba(0, 0, 0, 0.3);
    transition: background-color 0.2s;
    cursor: pointer;
    flex-shrink: 0;
    width: 160px;
    margin-left: 10px;
    margin-right: 10px;
}

.vjs-playlist-item:hover
{
    background-color: rgba(0, 0, 0, 0.5);
}

.vjs-playlist-item a
{
    display: flex;
    flex-direction: column;
    align-items: center;
    text-decoration: none;
    color: inherit;
    width: 100%;
}

.vjs-playlist-thumbnail
{
    width: 160px;
    height: 90px;
    object-fit: cover;
    border-radius: 10px;
    margin-bottom: 5px;
    flex-shrink: 0;
}

.vjs-playlist-info
{
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    overflow: hidden;
    width: 100%;
}

.vjs-playlist-title
{
    font-size: 1.3em;
    font-weight: bold;
    color: white;
    white-space: normal;
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    line-clamp: 2;
    -webkit-box-orient: vertical;
    text-align: center;
    line-height: 1.2em;
    max-height: 2.4em;
    margin-bottom: 3px;
}

.vjs-playlist-uploader
{
    font-size: 1em;
    color: #ddd;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    text-align: left;
    padding: 0.7em;
}

.vjs-playlist-duration
{
    font-size: 1.5em;
    color: #fff;
    position: relative;
    align-self: end;
    margin-top: auto;
    top: -1.7em;
    right: .2em;
    height: 0;
    overflow: visible;
    text-shadow: 2px 2px 4px rgb(0 0 0), -2px -2px 4px rgb(0 0 0);
}

.vjs-playlist-item.vjs-current-video
{
    background-color: color-mix(in srgb, var(--vjs-theme-custom--primary) 50%, black);
}

.vjs-playlist-toggle-button
{
    position: absolute;
    pointer-events: all;
    top: 10px;
    right: 10px;
    width: 3em;
    height: 3em;
    border-radius: 50%;
    background-color: var(--theme-bg-light);
    text-shadow: .02em .02em .1em rgba(0, 0, 0, 0.7), .02em -.02em .1em rgba(0, 0, 0, 0.7),-.02em .02em .1em rgba(0, 0, 0, 0.7), -.02em -.02em .1em rgba(0, 0, 0, 0.7);
    color: white;
    border: none;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: all 0.3s cubic-bezier(0.86, 0, 0.07, 1), background-color ease-in-out 1s;
    z-index: 10;
    font-size: 1.5em !important;
}

.vjs-marker
{
    position: absolute;
    background: rgba(255, 255, 255, 0.7);
    width: 2px;
    height: calc(100% + 6px);
    top: -3px;
    z-index: 1;
    margin-left: -1px;
    border: 3px solid transparent;
    background-clip: padding-box;
    padding: 1px;
}
/* ... */

